--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.17.3",
     "font-awesome": "^4.7.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.0.2",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
