--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "express": "^4.17.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.0.2",
     "url": "^0.11.0",
