--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
+    "react-use-cart": "^1.13.0",
     "slick-carousel": "^1.8.1",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.0.2",
