--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.0.2",
     "url": "^0.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "type": "module"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "react-refresh": "^0.12.0",
     "react-router-dom": "^6.2.2"
   }
 }
